<resources>
    <string name="app_name">Пилюльки</string>

    <!--    Common -->
    <string name="morning_title">Утро</string>
    <string name="noon_title">Обед</string>
    <string name="evening_title">Вечер</string>


    <!--    MainFragment-->
    <string name="breakfast_title">Завтрак</string>
    <string name="lunch_title">Обед</string>
    <string name="dinner_title">Ужин</string>
    <string name="floating_button_description">Добавить</string>
    <string name="button_apply_description">Применить</string>


    <!--    MedicineView-->
    <string name="default_time">0:00</string>
    <string name="more_button_description">more...</string>
    <string name="move_down_button_description">move down</string>
    <string name="move_up_button_description">move up</string>
    <string name="remove_button_description">remove item</string>


    <!--    Menu-->
    <string name="clear_all_title">Очистить всё</string>
    <string name="edit_title">Редактировать</string>

    <!--    TimePicker-->
    <string name="time_picker_title">Время приёма</string>
    <string name="reset_time_checkbox">Сбросить время</string>

    <!--    Alert Dialog-->
    <string name="alert_dialog_clear_title">Сборос</string>
    <string name="alert_dialog_clear_message">Сбросить время и отметки для всех пилюлек?</string>
    <string name="alert_dialog_clear_yes">Да</string>
    <string name="alert_dialog_clear_no">Нет</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Отмена</string>

    <!--    AddFragment -->
    <string name="edit_title_edit">Изменить пилюльку</string>
    <string name="edit_title_new">Добавить пилюльку</string>
    <string name="eating_time_title">Период веремени:</string>
    <string name="medicine_name">Название препарата</string>
    <string name="medicine_recipe">Способ приема</string>
    <string name="recipe_hit">за 30 мин до еды, 2шт</string>
    <string name="need_check_message">Выберете период веремени</string>
    <string name="button_add">Добавить</string>

    <!--    EditDialog -->
    <string name="edit_medicine_name">Название препарата</string>
    <string name="edit_medicine_recipe">Способ приема</string>
    <string name="hello_text">Здесь пока пусто.\n Нажмите \"+\" для добавления.</string>
    <string name="empty_data_text">Здесь пока пусто</string>
    <string name="click_plus_text">Нажмите \"+\", чтобы добавить пилюльку</string>
    <string name="hello_text2">Нажмите \"+\", чтобы добавить пилюльку</string>


</resources>