<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@color/edit_background"
        android:paddingVertical="8dp"
        android:text="@string/edit_title_edit"
        android:textAlignment="center"
        android:textColor="#EFC6B9"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:endIconTint="#C62828"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_medicine_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_medicine_name"
            android:inputType="textCapSentences"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:endIconTint="#C62828"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_medicine_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/edit_medicine_recipe"
            android:inputType="text"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/alert_dialog_ok"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/alert_dialog_cancel"
            android:textSize="18sp" />

    </LinearLayout>

    <!--    <Button-->
    <!--        android:id="@+id/ed_button_ok"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/button_ok"-->
    <!--        android:textSize="21sp" />-->

</LinearLayout>