<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0043A047"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        app:cardCornerRadius="15dp">
<!--        android:backgroundTint="@color/medicine_active"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/move_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:minWidth="36dp"
                android:background="@color/medicine_active"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/move_up_button_description"
                android:src="@drawable/icon_arrow_up"
                app:tint="@color/arrow_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/move_down_button"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/move_down_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:minWidth="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@color/medicine_active"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/move_down_button_description"
                android:src="@drawable/icon_arrow_down"
                app:tint="@color/arrow_background"
                app:layout_constraintTop_toBottomOf="@id/move_up_button"
                app:layout_constraintStart_toStartOf="@id/move_up_button"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Алмагель"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/move_up_button"
                app:layout_constraintEnd_toStartOf="@id/remove_button"
                app:layout_constraintBottom_toTopOf="@id/recipe" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                tools:text="За 2 чача до еды много-много текста на пять-шесть строчек"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time" />
<!--                tools:text="За 2 чача до еды"-->

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/default_time"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/clock"
                app:layout_constraintBottom_toBottomOf="@id/recipe"/>

            <ImageView
                android:id="@+id/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/time_picker_title"
                android:src="@drawable/icon_time_24"
                app:layout_constraintEnd_toStartOf="@id/remove_button"
                app:layout_constraintBottom_toBottomOf="@id/recipe" />

            <ImageButton
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="36dp"
                android:minWidth="36dp"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/remove_button_description"
                android:src="@drawable/icon_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>