<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.view.HomeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.ksv.pillsnumberone.ui.home.model.HomeViewModel" />

        <import type="android.view.View" />
        <import type="com.ksv.pillsnumberone.ui.home.model.HomeState"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_primaryContainer"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/pill_view" />
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="42dp"
            android:backgroundTint="#558B2F"
            android:contentDescription="@string/button_apply_description"
            android:src="@drawable/icon_apply"
            android:visibility="@{viewModel.isEditMode() &amp; viewModel.modifiedPill == null ? View.VISIBLE : View.GONE}"
            app:maxImageSize="42dp"
            app:tint="#FFFFFF"
            tools:visibility="visible" />
        <!--        android:nestedScrollingEnabled="false"-->
        <!--        app:shapeAppearance="?attr/shapeAppearance"-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="42dp"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/floating_button_description"
            android:src="@drawable/icon_add"
            android:visibility="@{viewModel.isEditMode() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="42dp"
            app:shapeAppearance="?attr/shapeAppearance"
            app:tint="#FFFFFF"
            tools:visibility="visible" />
        <!--        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"-->
        <!--            android:nestedScrollingEnabled="false"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.state instanceof HomeState.Empty ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">
<!--            android:visibility="@{viewModel.showEmptyDataHint ? View.VISIBLE : View.GONE}"-->

            <TextView
                android:id="@+id/empty_list_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/empty_data_text"
                android:textAlignment="center"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                tools:visibility="visible" />
            <!--                android:visibility="@{viewModel.showEmptyDataHint ? View.VISIBLE : View.GONE}"-->

            <TextView
                android:id="@+id/click_plus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/click_plus_text"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_list_text"
                app:layout_constraintVertical_bias="0.4"
                tools:visibility="visible" />
            <!--                android:visibility="@{viewModel.showEmptyDataHint ? View.VISIBLE : View.GONE}"-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>